<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear_layout1_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCancel_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:background="#ffffff"
            android:text="Cancel" />

        <Button
            android:id="@+id/buttonSave_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:background="#ffffff"
            android:text="Save" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout2_edit"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/add_TaskInformation_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text=""
            android:hint="@string/TaskInformationEdit" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout3_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/add_DueDate_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:maxLength="20"
            android:text=""
            android:hint="@string/DueDate" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout4_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/add_Name_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text=""
            android:hint="@string/Name" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_layout5_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/add_emailAddress_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:text=""
            android:hint="@string/EmailAddress" />
    </LinearLayout>

</LinearLayout>